--- a/package.json
+++ b/package.json
@@ -12,23 +12,17 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.150.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "10.17.27",
-    "aws-cdk": "1.150.0",
-    "jest": "^27.2.5",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "@types/jest": "^27.5.2",
+    "@types/node": "^18.6.4",
+    "aws-cdk": "2.30.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-stepfunctions-tasks": "1.150.0",
-    "@aws-cdk/aws-s3-deployment": "1.150.0",
-    "@aws-cdk/aws-lambda-event-sources": "1.150.0",
-    "@aws-cdk/aws-glue": "1.150.0",
-    "@aws-cdk/aws-lambda": "1.150.0",
-    "@aws-cdk/custom-resources": "1.150.0",
-    "@aws-cdk/aws-iam": "1.150.0",
-    "@aws-cdk/core": "1.150.0",
+    "aws-cdk-lib": "2.30.0",
+    "constructs": "^10.0.0",
     "env-var": "6.3.0",
     "source-map-support": "^0.5.16"
   }
